Unreleased
	* file_store: ensure that the temporary directory exists
	* jug shell: Add `get_filtered_tasks()`
	* Fix `jug --version` (which had been broken in the refactoring to use
	subcommands)
	* Fix message in `jug shell` when there are no dependencies (it would
	repeatedly print the message stating "this will only be run once")

Version 2.2.2 Tue 19 Jul 2022 by luispedro
	* Fix `jug cleanup` when packs are used (`jug pack`)

Version 2.2.1 Thu 19 May 2022 by luispedro
	* Fix `jug cleanup` for redis backend

Version 2.2.0 Tue 3 May 2022 by luispedro
	* Add `jug pack` subcommand
	* Remove six dependency
	* Make get_tasks() return a copy of the tasks

Version 2.1.1 Thu 18 Mar 2021 by luispedro
	* Include requirements files in distribution

Version 2.1.0 Thu 18 Mar 2021 by luispedro
	* Improvements to webstatus (by Robert Denham)
	* Removed Python 2.7 support
	* Fix output encoding for Python 3.8
	* Fix bug mixing mapreduce() & status --cache
	* Make block_access (used in mapreduce()) much faster (20x)
	* Fix important redis bug
	* More precise output in `cleanup` command

Version 2.0.2 Thu Jun 11 2020 by luispedro
	* Fix jug argument parsing

Version 2.0.1 Thu Jun 11 2020 by luispedro
	* Fix handling of `JUG_EXIT_IF_FILE_EXISTS` environmental variable
	* Fix passing an argument to jug.main() function
	* Extend `--pdb` to exceptions raised while importing the jugfile (issue
	#79)

version 2.0.0 Fri Feb 21 2020 by luispedro
	* jug.backend.base_store has 1 new method 'listlocks'
	* jug.backend.base_lock has 2 new methods 'fail' and 'is_failed'
	* Add 'jug execute --keep-failed' to preserve locks on failing tasks.
	* Add 'jug cleanup --failed-only' to remove locks from failed tasks
	* 'jug status' and 'jug graph' now display failed tasks
	* Check environmental exit variables by default (suggested by Renato Alves, issue #66)
	* Fix 'jug sleep-until' in the presence of barrier() (issue #71)

version 1.6.9 Tue Aug 6 2019 by luispedro