@@ -5,6 +5,8 @@ Unreleased
 	subcommands)
 	* Fix message in `jug shell` when there are no dependencies (it would
 	repeatedly print the message stating "this will only be run once")
+	* jug pack: Make it much faster to invalidate elements
+	* jug shell: Fix for newer versions of IPython
 
 Version 2.2.2 Tue 19 Jul 2022 by luispedro
 	* Fix `jug cleanup` when packs are used (`jug pack`)
